Fix text alignment

--- a/Matteo/alt.css
+++ b/Matteo/alt.css
@@ -112,6 +112,7 @@ a {
 
 .video {
     position: relative;
+    right:0;
     width: 100%;
     height: 100%;
     max-height: 100vh;
@@ -165,10 +166,10 @@ a {
 .mySlides8,
 .mySlides9 {
     height: 100%;
+    width:100%;
     overflow: auto;
     position: absolute;
     top: 0px;
-    right: 0px;
     opacity: 0;
     z-index: 1;
     -webkit-transition: opacity ease 1s;
